Minor tox changes

--- a/section-05-production-model-package/tox.ini
+++ b/section-05-production-model-package/tox.ini
@@ -13,7 +13,7 @@ envlist = test_package, checks
 skipsdist = True
 
 [testenv]
-basepython = python
+basepython = python3.8
 install_command = pip install {opts} {packages}
 allowlist_externals = train
 
