Removed docker version from config

--- a/section-06-model-serving-api/house-prices-api/tox.ini
+++ b/section-06-model-serving-api/house-prices-api/tox.ini
@@ -16,7 +16,7 @@ skipsdist = True
 
 [testenv]
 install_command = pip install {opts} {packages}
-basepython = python3.8
+#basepython = python
 
 [testenv:test_app]
 deps =
